# pylmm3

./: .gitignore  README.md  RELEASING.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
pylmm/scripts/: pylmmGWAS.py  pylmmKinship.py
pylmm3/: __init__.py  gwas.py  gwas_fast.py  input.py  kinship.py  lmm.py  log.py  misc.py
pylmm3/scripts/: example.py  pylmmGWAS.py  pylmmKinship.py
tests/: conftest.py  test_gwas.py  test_input.py  test_kinship.py  test_lmm.py
