[tool.poetry]
name = "pylmm3"
version = "0.1.0"
description = "Python 3 implementation of Pylmm"
authors = ["Your Name <you@example.com>"]
license = "AGPL-3.0-or-later"
repository = "https://bitbucket.org/jacksonlaboratory/pylmm3/src/master/scripts/pylmmKinship.py"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
scipy = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.scripts]
pylmmGWAS = 'scripts.pylmmGWAS:main'
pylmmKinship = 'scripts.pylmmKinship:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
